--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Webmapping en R <img src="/home/runner/work/Workshop-MasterGIS2021/Workshop-MasterGIS2021/slide/img/globe.gif" width="120px">
+# Webmapping en R <img src="https://raw.githubusercontent.com/ambarja/Workshop-MasterGIS2021/main/slide/img/globe.gif" width="120px">
 ## Cambiando paradigmas en la visualización de datos espaciales
 <hr>
 ### Antony Barja<br/><i class='fab fa-github'></i> <a href="https://ambarja.github.io" class="uri">https://ambarja.github.io</a><br><i class='fab fa-twitter'></i> <a href="https://twitter.com/antony_barja" class="uri">https://twitter.com/antony_barja</a>
