--- a/slide/index.html
+++ b/slide/index.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8" />
     <meta name="author" content="Antony Barja  https://ambarja.github.io  https://twitter.com/antony_barja" />
     <meta name="date" content="2021-11-16" />
-    <script src="libs/header-attrs/header-attrs.js"></script>
-    <script src="libs/htmlwidgets/htmlwidgets.js"></script>
-    <script src="libs/jquery/jquery.min.js"></script>
-    <link href="libs/leaflet/leaflet.css" rel="stylesheet" />
-    <script src="libs/leaflet/leaflet.js"></script>
-    <link href="libs/leafletfix/leafletfix.css" rel="stylesheet" />
-    <script src="libs/proj4/proj4.min.js"></script>
-    <script src="libs/Proj4Leaflet/proj4leaflet.js"></script>
-    <link href="libs/rstudio_leaflet/rstudio_leaflet.css" rel="stylesheet" />
-    <script src="libs/leaflet-binding/leaflet.js"></script>
+    <script src="output/header-attrs/header-attrs.js"></script>
+    <script src="output/htmlwidgets/htmlwidgets.js"></script>
+    <script src="output/jquery/jquery.min.js"></script>
+    <link href="output/leaflet/leaflet.css" rel="stylesheet" />
+    <script src="output/leaflet/leaflet.js"></script>
+    <link href="output/leafletfix/leafletfix.css" rel="stylesheet" />
+    <script src="output/proj4/proj4.min.js"></script>
+    <script src="output/Proj4Leaflet/proj4leaflet.js"></script>
+    <link href="output/rstudio_leaflet/rstudio_leaflet.css" rel="stylesheet" />
+    <script src="output/leaflet-binding/leaflet.js"></script>
     <link rel="stylesheet" href="default.css" type="text/css" />
     <link rel="stylesheet" href="meliodas.css" type="text/css" />
   </head>
@@ -144,8 +144,8 @@ L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(map);
 ---
 # Resultado
 
-<div id="htmlwidget-032043ca384b11dd9bd5" style="width:1044px;height:504px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-032043ca384b11dd9bd5">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addPopups","args":[-12.0556056,-77.086536,"<h3>Mi primer mapa web 🤓<\/h3>",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":true,"className":""}]}],"limits":{"lat":[-12.0556056,-12.0556056],"lng":[-77.086536,-77.086536]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-d8db6cc7dfc7ca85c609" style="width:1044px;height:504px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-d8db6cc7dfc7ca85c609">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addPopups","args":[-12.0556056,-77.086536,"<h3>Mi primer mapa web 🤓<\/h3>",null,null,{"maxWidth":300,"minWidth":50,"autoPan":true,"keepInView":false,"closeButton":true,"className":""}]}],"limits":{"lat":[-12.0556056,-12.0556056],"lng":[-77.086536,-77.086536]}},"evals":[],"jsHooks":[]}</script>
 
 ---
 class: center, middle,inverse
